added holiday note to timetable

--- a/src/pages/timetable.astro
+++ b/src/pages/timetable.astro
@@ -2,175 +2,180 @@
 import Page from '../layouts/Page.astro'
 ---
 <Page title="Timetable">
-    <div class="week">
-        <div class="day">
-            <h1>Monday</h1>
-            <ul>
-                <li>
-                    <div class="time">12:00pm - 1:30pm</div>
-                    <div class="session erina adults">
-                        <div>Adults and Teens</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="time">4:00pm - 5:00pm</div>
-                    <div class="session erina mini">
-                        <div>Mini Kids (5 - 8 years)</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="time">5:00pm - 6:00pm</div>
-                    <div class="session erina kids">
-                        <div>Kids (9 - 12 years)</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-            </ul>
-        </div>
+  <div class="week">
+      <div class="day">
+          <h1>Monday</h1>
+          <ul>
+              <li>
+                  <div class="time">12:00pm - 1:30pm</div>
+                  <div class="session erina adults">
+                      <div>Adults and Teens</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+              <li>
+                  <div class="time">4:00pm - 5:00pm</div>
+                  <div class="session erina mini">
+                      <div>Mini Kids (5 - 8 years)</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+              <li>
+                  <div class="time">5:00pm - 6:00pm</div>
+                  <div class="session erina kids">
+                      <div>Kids (9 - 12 years)</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+          </ul>
+      </div>
 
-        <div class="day">
-            <h1>Tuesday</h1>
-            <ul>
-                <li>
-                    <div class="time">6:00pm - 7:30pm</div>
-                    <div class="session erina teen-boys">
-                        <div>Teen Boys</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="time">7:30pm - 9:00pm</div>
-                    <div class="session erina adults">
-                        <div>Tuesday Titans Judo Comp Training</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-            </ul>
-        </div>
+      <div class="day">
+          <h1>Tuesday</h1>
+          <ul>
+              <li>
+                  <div class="time">6:00pm - 7:30pm</div>
+                  <div class="session erina teen-boys">
+                      <div>Teen Boys</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+              <li>
+                  <div class="time">7:30pm - 9:00pm</div>
+                  <div class="session erina adults">
+                      <div>Tuesday Titans Judo Comp Training</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+          </ul>
+      </div>
 
-        <div class="day">
-            <h1>Wednesday</h1>
-            <ul>
-                <li>
-                    <div class="time">10:00am - 11:30am</div>
-                    <div class="session erina adults">
-                        <div>Adults and Teens</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="time">4:00pm - 5:00pm</div>
-                    <div class="session erina mini">
-                        <div>Mini Kids (5 - 8 years)</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="time">5:00pm - 6:00pm</div>
-                    <div class="session erina kids">
-                        <div>Kids (9 - 12 years)</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="time">6:30pm - 8:00pm</div>
-                    <div class="session niagara-park open-mat">
-                        <div>Judo and Jiu Jitsu Open Mat</div>
-                        <div class="location">Niagara Park</div>
-                    </div>
-                </li>
-            </ul>
-        </div>
+      <div class="day">
+          <h1>Wednesday</h1>
+          <ul>
+              <li>
+                  <div class="time">10:00am - 11:30am</div>
+                  <div class="session erina adults">
+                      <div>Adults and Teens</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+              <li>
+                  <div class="time">4:00pm - 5:00pm</div>
+                  <div class="session erina mini">
+                      <div>Mini Kids (5 - 8 years)</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+              <li>
+                  <div class="time">5:00pm - 6:00pm</div>
+                  <div class="session erina kids">
+                      <div>Kids (9 - 12 years)</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+              <li>
+                  <div class="time">6:30pm - 8:00pm</div>
+                  <div class="session niagara-park open-mat">
+                      <div>Judo and Jiu Jitsu Open Training</div>
+                      <div class="location">Niagara Park</div>
+                  </div>
+              </li>
+          </ul>
+      </div>
 
-        <div class="day">
-            <h1>Thursday</h1>
-            <ul>
-                <li>
-                    <div class="time">5:00pm - 6:00pm</div>
-                    <div class="session erina teen-girls">
-                        <div>Teen Girls</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="time">7:30pm - 9:00pm</div>
-                    <div class="session erina adults">
-                        <div>Adults and Teens</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-            </ul>
-        </div>
+      <div class="day">
+          <h1>Thursday</h1>
+          <ul>
+              <li>
+                  <div class="time">5:00pm - 6:00pm</div>
+                  <div class="session erina teen-girls">
+                      <div>Teen Girls</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+              <li>
+                  <div class="time">7:30pm - 9:00pm</div>
+                  <div class="session erina adults">
+                      <div>Adults and Teens</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+          </ul>
+      </div>
 
-        <div class="day">
-            <h1>Friday</h1>
-            <ul>
-                <li>
-                    <div class="time">10:00am - 11:30am</div>
-                    <div class="session erina adults">
-                        <div>Adults and Teens</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="time">5:30pm - 6:30pm</div>
-                    <div class="session niagara-park mixed-kids">
-                        <div>Mini Kids/Kids Combined (5-12 years)</div>
-                        <div>Niagara Park</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="time">6:30pm - 8:00pm</div>
-                    <div class="session niagara-park adults">
-                        <div>Adults and Teens</div>
-                        <div>Niagara Park</div>
-                    </div>
-                </li>
-            </ul>
-        </div>
+      <div class="day">
+          <h1>Friday</h1>
+          <ul>
+              <li>
+                  <div class="time">10:00am - 11:30am</div>
+                  <div class="session erina adults">
+                      <div>Adults and Teens</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+              <li>
+                  <div class="time">5:30pm - 6:30pm</div>
+                  <div class="session niagara-park mixed-kids">
+                      <div>Mini Kids/Kids Combined (5-12 years)</div>
+                      <div>Niagara Park</div>
+                  </div>
+              </li>
+              <li>
+                  <div class="time">6:30pm - 8:00pm</div>
+                  <div class="session niagara-park adults">
+                      <div>Adults and Teens</div>
+                      <div>Niagara Park</div>
+                  </div>
+              </li>
+          </ul>
+      </div>
 
-        <div class="day">
-            <h1>Saturday</h1>
-            <ul>
-                <li>
-                    <div class="time">9:00am - 10:00am</div>
-                    <div class="session erina mini">
-                        <div>Mini Kids (5 - 8 years)</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="time">10:00am - 11:00am</div>
-                    <div class="session erina kids">
-                        <div>Kids (9 - 12 years)</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="time">3:00pm - 5:00pm</div>
-                    <div class="session erina adults">
-                        <div>Adults and Teens</div>
-                        <div>Erina</div>
-                    </div>
-                </li>
-            </ul>
-        </div>
+      <div class="day">
+          <h1>Saturday</h1>
+          <ul>
+              <li>
+                  <div class="time">9:00am - 10:00am</div>
+                  <div class="session erina mini">
+                      <div>Mini Kids (5 - 8 years)</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+              <li>
+                  <div class="time">10:00am - 11:00am</div>
+                  <div class="session erina kids">
+                      <div>Kids (9 - 12 years)</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+              <li>
+                  <div class="time">3:00pm - 5:00pm</div>
+                  <div class="session erina adults">
+                      <div>Adults and Teens</div>
+                      <div>Erina</div>
+                  </div>
+              </li>
+          </ul>
+      </div>
 
-        <div class="day">
-            <h1>Sunday</h1>
-            <ul>
-                <li>
-                    <div class="time">11:00am - 12:30pm</div>
-                    <div class="session niagara-park open-mat">
-                        <div>Judo and Jiu Jitsu Open Mat</div>
-                        <div class="location">Erina</div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
+      <div class="day">
+          <h1>Sunday</h1>
+          <ul>
+              <li>
+                  <div class="time">11:00am - 12:30pm</div>
+                  <div class="session niagara-park open-mat">
+                      <div>Judo and Jiu Jitsu Open Training</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
+          </ul>
+      </div>
+  </div>
+  <div class="mt-12">
+    <p>Note: During school holidays, kids and teens classes will not be running. Interested teens are encouraged
+      to join in our Adults and Teens sessions.
+    </p>
+  </div>
 </Page>
 
 <style>
