footer top margin

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ import instagramLogo from '../assets/images/icons/instagram.svg?raw'
 import GoToTopButton from '../components/GoToTopButton.astro'
 ---
 
-<footer class="flex flex-col p-4 gap-4 relative">
+<footer class="flex flex-col p-4 gap-4 relative mt-12">
   <a href="/"><img src={jccText.src} alt="Judo Central Coast Logo" class="h-8 mx-auto opacity-50 hover:opacity-100 transition-opacity duration-500" /><span class="hidden">ZBR</span></a>
   <div>
   </div>
