added missing class

--- a/src/pages/timetable.astro
+++ b/src/pages/timetable.astro
@@ -27,6 +27,13 @@ import Page from '../layouts/Page.astro'
                       <div class="location">Erina</div>
                   </div>
               </li>
+              <li>
+                  <div class="time">7:30pm - 9:00pm</div>
+                  <div class="session erina adults">
+                      <div>Adults and Teens</div>
+                      <div class="location">Erina</div>
+                  </div>
+              </li>
           </ul>
       </div>
 
