change junior membership to show school term instead of quarterly

--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -24,7 +24,7 @@ import Page from '../layouts/Page.astro'
                     <p class="price">$60</p>
                 </div>
                 <div class="quarterly">
-                    <p>3 Months</p>
+                    <p>School Term</p>
                     <p class="price">$150</p>
                 </div>
             </li>
