trial class change to week

--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -11,9 +11,9 @@ import Page from '../layouts/Page.astro'
         <h1>Mat Fees</h1>
         <ul class="prices">
             <li>
-                <h2>Trial Class</h2>
+                <h2>Trial Week</h2>
                 <div class="free">
-                    <p>Your first class is on us!</p>
+                    <p>Your first week is on us!</p>
                     <p class="price">FREE</p>
                 </div>
             </li>
