--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -61,7 +61,7 @@ import Page from '../layouts/Page.astro'
         </p>
         <p>
             This membership can be obtained via the
-            <a href="https://www.revolutionise.com.au/judonsw/clubs-rego/">Judo NSW portal</a>.
+            <a href="https://www.revolutionise.com.au/judonsw/rego">Judo NSW portal</a>.
         </p>
         <p>
             If you have any questions please feel free to <a href="/contact">contact us</a>.
@@ -101,7 +101,7 @@ a {
 }
 
 section {
-    @apply flex flex-col gap-4 w-full max-w-2xl mx-auto mb-6;
+    @apply flex flex-col gap-4 w-full max-w-4xl mx-auto mb-6;
 
     h1 {
         @apply text-center sm:text-left font-bold text-2xl;
