--- a/src/components/HeaderMenu.astro
+++ b/src/components/HeaderMenu.astro
@@ -26,7 +26,7 @@ import ToggleTheme from './ToggleTheme.astro'
                 <li><a href="/timetable">Timetable</a></li>
                 <li><a href="/locations">Locations</a></li>
                 <li><a href="/pricing">Pricing</a></li>
-                <li><a href="/">Resources</a></li>
+                <li><a href="/resources">Resources</a></li>
                 <li><a href="/contact">Contact Us</a></li>
                 <li><ToggleTheme /></li>
             </ul>
