--- a/src/pages/locations.astro
+++ b/src/pages/locations.astro
@@ -1,72 +1,99 @@
 ---
 import Page from '../layouts/Page.astro'
+
+import Leaflet from '../components/Leaflet.astro'
 ---
 <Page title="Locations">
-    <section>
-        <p>blahblah</p>
-    </section>
-    <section>
-        <h1>Erina (Kugatsu) Dojo</h1>
-        <ul>
-            <li>
-                <h4>Address</h4>
-                <div>
-                    <p>The Lifestyle Building</p>
-                    <p>3 Chiltern Road</p>
-                    <p>Erina NSW 2250</p>
-                </div>
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h1>Niagara Park (Jita Kyoei) Dojo</h1>
-        <ul>
-            <li>
-                <h4>Address</h4>
-                <div>
-                    <p>Niagara Park Stadium</p>
-                    <p>18 Washington Ave</p>
-                    <p>Niagara Park NSW 2250</p>
-                </div>
-            </li>
-        </ul>
-    </section>
+  <section>
+      <h1>blahblah</h1>
+  </section>
+  <section>
+    <h1>Erina (Kugatsu) Dojo</h1>
+    <div class="location">
+      <ul>
+          <li>
+              <h4>Address</h4>
+              <div>
+                  <p>The Lifestyle Building</p>
+                  <p>3 Chiltern Road</p>
+                  <p>Erina NSW 2250</p>
+              </div>
+          </li>
+      </ul>
+      <div class="w-full max-w-xl mx-auto aspect-video">
+        <Leaflet
+          latitude="-33.42809"
+          longitude="151.39542"
+          zoom="17"
+          tileLayer="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
+          attribution="&copy; <a href='https://www.openstreetmap.org/copyright'>OpenStreetMap</a> contributors"
+          marker="true"
+        />
+      </div>
+    </div>
+  </section>
+  <section>
+    <h1>Niagara Park (Jita Kyoei) Dojo</h1>
+    <div class="location">
+      <ul>
+          <li>
+              <h4>Address</h4>
+              <div>
+                  <p>Niagara Park Stadium</p>
+                  <p>18 Washington Ave</p>
+                  <p>Niagara Park NSW 2250</p>
+              </div>
+          </li>
+      </ul>
+      <div class="w-full max-w-2xl mx-auto aspect-video">
+        <Leaflet
+          latitude="-33.38366"
+          longitude="151.35238"
+          zoom="17"
+          tileLayer="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
+          attribution="&copy; <a href='https://www.openstreetmap.org/copyright'>OpenStreetMap</a> contributors"
+          marker="true"
+        />
+      </div>
+    </div>
+  </section>
 </Page>
 
 <style>
 a {
-    @apply text-primary;
+  @apply text-primary;
 }
 
 section {
-    @apply flex flex-col gap-4 w-full max-w-2xl mx-auto mb-6;
+  @apply flex flex-col gap-4 w-full max-w-4xl mx-auto mb-6;
 
-    h1 {
-        @apply text-center sm:text-left font-bold text-2xl;
-    }
+  h1 {
+    @apply text-center sm:text-left font-bold text-2xl;
+  }
 
-    h4 {
-        @apply font-bold;
-    }
+  .location {
+    @apply w-full flex flex-col lg:flex-row gap-4;
 
     ul {
-        @apply sm:ml-8 flex flex-col gap-6 sm:gap-4;
+      @apply sm:ml-8 flex flex-col gap-6 sm:gap-4 lg:min-w-[16rem];
 
-        li {
-            @apply flex flex-col sm:flex-row gap-6 w-full;
+      li {
+        @apply flex flex-col sm:flex-row gap-6 w-full;
 
-            h2 {
-                @apply font-bold sm:flex-none sm:w-36 text-xl;
-            }
-
-            div {
-                @apply flex-1 flex flex-col gap-2;
-
-                .price {
-                    @apply font-bold text-xl;
-                }
-            }
+        h2 {
+          @apply font-bold sm:flex-none sm:w-36 text-xl;
         }
+
+        div {
+          @apply flex-1 flex flex-col gap-2;
+
+          .price {
+            @apply font-bold text-xl;
+          }
+        }
+      }
     }
+  }
 }
 </style>
+
