--- a/src/pages/locations.astro
+++ b/src/pages/locations.astro
@@ -86,7 +86,7 @@ section {
     @apply w-full flex flex-col lg:flex-row gap-4;
 
     ul {
-      @apply sm:ml-8 flex flex-col gap-6 sm:gap-4 lg:min-w-[16rem];
+      @apply sm:ml-8 flex flex-col gap-6 sm:gap-4 lg:min-w-64;
 
       li {
         @apply flex flex-col sm:flex-row gap-6 w-full;
