added text to resources page

--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -5,7 +5,8 @@ import Techniques from '../assets/files/100 kodokan techniques.pdf'
 
 <Page title="Resources">
   <section>
-    <ul>
+    <div>Some useful links and downloads:</div>
+    <ul class="list-disc ml-8">
       <li><a href="https://judonsw.com.au/">Judo NSW Main Website</a></li>
       <li><a href="https://ausjudo.com.au/">Judo Australia Main Website</a></li>
       <li><a href="https://rise.articulate.com/share/mgkGB9ClG1C3dXe9_6BgM0jx6euzwGtr#/">100 Kodokan Techniques (online with videos)</a></li>
