accessibility tag and temp hide social links

--- a/src/components/Leader.astro
+++ b/src/components/Leader.astro
@@ -3,7 +3,7 @@ import jccLogo from '../assets/images/jcc-logo.png'
 import ArrowDown from '../assets/images/icons/arrow-down-circle.svg?raw'
 ---
 <leader-screen class="h-screen flex relative justify-center items-center -mb-20 px-4">
-    <img src={jccLogo.src} />
+    <img src={jccLogo.src} alt="Judo Central Coast Logo" />
     <a id="scroll-down" href="#nav-header" class="absolute bottom-32 w-16 h-16">
         <Fragment set:html={ArrowDown} />
     </a>
